[project]
name = "p4c"
requires-python = ">=3.8"

[flake8]
max-line-length = 100
max-complexity = 10
extend-ignore = "E203"

[tool.isort]
profile = 'black'
line_length = 100

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.mypy]
namespace_packages = true
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
# Same as Black.
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pylint.main]
init-hook="from pylint.config import find_default_config_files; import os, sys, pathlib; sys.path.append(next(find_default_config_files()).parent);sys.path.append(f'{pathlib.Path().home()}.local/lib/python{sys.version_info[0]}.{sys.version_info[1]}/site-packages/');"
[tool.pylint.messages_control]
max-line-length = 100
disable = [
  "missing-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
]

[tool.poetry]
name = "p4c"
version = "1.2.5.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
pyroute2 = "0.7.3"
ply = "3.11"
ptf = "0.10.0"
scapy = "2.5.0"
clang-format = "18.1.0"
googleapis-common-protos = "1.53.0"
protobuf = [
  {version = "3.20.2", python = ">3.6"},
  {version = "3.19.2", python = "<=3.6"}
]
black = [
  {version = "24.3.0", python = ">3.6"},
  {version = "22.8.0", python = "<=3.6"}
]
isort = [
  {version = "5.13.2", python = ">3.6"},
  {version = "5.10.1", python = "<=3.6"}
]
grpcio = [
  {version = "1.67.0", python = ">3.6"},
  {version = "1.48.2", python = "<=3.6"}
]
p4runtime = "1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
