load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "bison",
    srcs = ["bison.bzl"],
)

bzl_library(
    name = "flex",
    srcs = ["flex.bzl"],
)

bzl_library(
    name = "p4_library",
    srcs = ["p4_library.bzl"],
)
